--- a/src/components/Buttons/TutorialConfirmButton.astro
+++ b/src/components/Buttons/TutorialConfirmButton.astro
@@ -42,7 +42,7 @@ const { text, tutorialUnit } = Astro.props as Props;
       element.setAttribute("data-complete","complete");
       //update text inside tracker
       var subElement = element.querySelector(".sectionValue");
-      subElement.innerHTML = "complete";
+      subElement.innerHTML = "Complete";
     });
   }
   
