--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,14 +56,17 @@ import Button from '~/components/Button.astro';
 						<p>You're logged in.  Currently logged in as: <UserInfo info="email"/></p>
 						<div class="button-wrap">
 							<Button style="min-width: 300px; justify-content: center" variant="secondary" onClick="netlifyIdentity.logout();">Log out</Button>
+							<Button variant="primary" href="/en/getting-started">Get Started Now</Button>
 						</div>
 					</div>
 
 					<div slot="loggedOut">
 						<p>You're logged out</p>
 						<div class="button-wrap">
-							<Button style="width: 300px; justify-content: center" variant="secondary" onClick="netlifyIdentity.open('login');">Login</Button>
-							<Button style="width: 300px; justify-content: center" variant="outline" onClick="netlifyIdentity.open('signup');">Sign up</Button>
+							<Button variant="secondary" onClick="netlifyIdentity.open('login');">Login</Button>
+							<Button variant="outline" onClick="netlifyIdentity.open('signup');">Sign up</Button>
+							<Button variant="primary" href="/en/getting-started">Get Started Now</Button>
+
 						</div>
 					</div>
 					
@@ -71,11 +74,7 @@ import Button from '~/components/Button.astro';
 
 				</IfLoggedIn>
 
-				<div>
-					<div class="button-wrap">
-						<Button style="width: 300px; justify-content: center" variant="primary" href="/en/getting-started">Get Started Now</Button>
-					</div>
-				</div>
+				
 			</div>
 			
 			<!-- <div class="cell">
@@ -106,8 +105,16 @@ import Button from '~/components/Button.astro';
 		.content {
 			position: relative;
 			z-index: 1;
-			padding: 25vh 0;
-			max-width: 80vw;
+			padding-top: calc(var(--theme-navbar-height) + var(--doc-padding-block));
+			padding-bottom: var(--doc-padding-block);
+			padding-inline: var(--min-spacing-inline);
+			width: 100%;
+			height: 100%;
+			margin-inline: auto;
+			display: flex;
+			flex-direction: column;
+			overflow-x: hidden;
+			// max-width: 80vw;
 			@media (min-width: 50em) {
 				max-width: 50vw;
 			}
@@ -130,8 +137,8 @@ import Button from '~/components/Button.astro';
 				margin-bottom: 1.5em;
 			}
 			.button-wrap {
-				display: flex;
-				flex-direction: column;
+				// display: flex;
+				// flex-direction: column;
 			}
 			.button {
 				width: 300px;
