--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -40,6 +40,7 @@ const currentYear = new Date().getFullYear();
 		list-style: none;
 		margin: 0 2.5%;
 		padding: 10px;
+		text-align: left;
 		.first {
 			margin-right: auto;
 		}
@@ -48,6 +49,7 @@ const currentYear = new Date().getFullYear();
 	.footer-links a {
 		color: var(--theme-text-lighter);
 		text-decoration: none;
+		
 	}
 
 	.footer-links a:focus,
