TutorialTrackerWrapper set up with multiple tabs, TutorialTracker now supports multiple instances each with it's own output

--- a/public/TutorialTracker.css
+++ b/public/TutorialTracker.css
@@ -1,11 +1,10 @@
 .TutorialTracker{
-   background-color: var(--custom-teal-25);
-   padding: 1em;
+   
 }
 
 /*Tutorial Groups*/
    .TutorialTracker .tutorialGroup{
-      padding-left: 1em;
+      padding-left: 0em;
       margin-bottom: 2em;
    }
 
@@ -14,6 +13,12 @@
    display: flex;
    justify-content: flex-start;
    align-items: center;
+   margin-bottom: 0.5em;
+   border: 1px solid var(--custom-accent-1-50);
+   border-radius: 0.5rem;
+   padding: 0.5em;
+   width: 100%;
+   max-width: 300px;
  }
 
  .TutorialTracker .sectionValue{
@@ -24,12 +29,13 @@
    .TutorialTracker .tutorialUnit .checkbox{
       width: 2em;
       height: 2em;
-      border: solid 1px #000;
+      border: 1px solid var(--custom-accent-1-50);
       display: inline-flex;
       justify-content: center;
       align-items: center;
       margin-right: 0.5em;
       background-color: transparent;
+      border-radius: 100%;
    }
    .TutorialTracker .tutorialUnit .checkbox svg{
       opacity: 0;
@@ -37,7 +43,6 @@
 
    /*Complete State*/
    .TutorialTracker .tutorialUnit[data-complete="complete"] .checkbox{
-      border: solid 1px #000;
       background-color: #81C051;
    }
    .TutorialTracker .tutorialUnit[data-complete="complete"] .checkbox svg{
