--- a/public/TutorialTracker.css
+++ b/public/TutorialTracker.css
@@ -5,7 +5,7 @@
 /*Tutorial Groups*/
    .TutorialTracker .tutorialGroup{
       padding-left: 0em;
-      margin-bottom: 2em;
+      /*margin-bottom: 2em;*/
    }
 
 /*Individual Units*/
