--- a/src/components/ResourceCard.astro
+++ b/src/components/ResourceCard.astro
@@ -3,14 +3,15 @@
 import Button from '../components/Button.astro'
 import { Icon } from 'astro-icon'
 
-import CMSIcon from '../components/CMSIcon.astro';
+// import CMSIcon from '../components/CMSIcon.astro';
 
 
 ---
 
 <div class={`resource-card ${Astro.props.width ?? 'third'} ${Astro.props.tags.join(' ')}`} data-tags={Astro.props.tags.join(',')}>  
   <div class="icon-container">
-    <Icon name={Astro.props.astroicon} />
+    <Icon name={Astro.props.astroicon || "mdi:alert"} />
+
   </div>
   <!-- <div class="icon-container">
     <CMSIcon name={sanityData.name} provider={sanityData.provider} />
