making an branch super close to prototype colors

--- a/public/custom-theme.css
+++ b/public/custom-theme.css
@@ -47,6 +47,15 @@
 		--custom-grey-1-20: 	#80808020;
 		--custom-grey-1-10: 	#80808010;
 		--custom-grey-1-05: 	#80808005;
+		
+		
+		--custom-grey-2: 			#606060;
+		--custom-grey-2-90: 	#606060e6;
+		--custom-grey-2-80: 	#606060cc;
+		--custom-grey-2-50: 	#60606080;
+		--custom-grey-2-20: 	#60606020;
+		--custom-grey-2-10: 	#60606010;
+		--custom-grey-2-05: 	#60606005;
 
 
 	/* ======================== */
