--- a/src/components/ResourceDetails.astro
+++ b/src/components/ResourceDetails.astro
@@ -26,8 +26,8 @@ import { Icon } from 'astro-icon'
         }
     }
     .icon-container {
-        /* background-color: var(--theme-bg-gradient); */
-        background-color: var(--theme-dim-lighter);
+        // background-color: var(--theme-bg-gradient);
+        // background-color: var(--theme-dim-lighter);
         display: inline-flex;
         align-items: center;
         justify-content: center;
