--- a/src/components/ResourceThumb.astro
+++ b/src/components/ResourceThumb.astro
@@ -21,7 +21,7 @@ import { Icon } from 'astro-icon'
 <style lang="scss">
     .thumbnail-wrapper {
         .thumbnail {
-            height: 400px;
+            // height: 400px;
             max-width: 33%;
             // width: 320px;
            
