--- a/public/theme.css
+++ b/public/theme.css
@@ -24,6 +24,14 @@
 	--theme-ease-bounce: cubic-bezier(0.4, 2.5, 0.6, 1);
 }
 
+/* IMPORT MONTSERRAT */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+
 @media (min-width: 50em) {
 	:root {
 		--min-spacing-inline: 1.5rem;
@@ -118,12 +126,15 @@
 	--theme-accent-opacity: 0.1;
 	--theme-divider: hsla(var(--color-purple), 0.1);
 	--theme-shade-subtle: hsla(var(--color-purple), 0.3);
-	--theme-text: hsla(var(--color-gray-10), 1);
-	--theme-text-light: hsla(var(--color-gray-30), 1);
-	--theme-text-lighter: hsla(var(--color-gray-40), 1);
-	--theme-bg:  hsl(198, 37%, 93%);
+	--theme-text: var(--custom-grey-2);
+	/* --theme-text: hsla(var(--color-gray-10), 1); */
+	--theme-text-light: var(--custom-grey-2-90);
+	/* --theme-text-light: hsla(var(--color-gray-30), 1); */
+	--theme-text-lighter: var(--custom-grey-2-80);
+	/* --theme-text-lighter: hsla(var(--color-gray-40), 1); */
+	--theme-bg:  #F9F9F8;
 	--theme-bg-gradient-top: var(--theme-bg);
-	--theme-bg-gradient-bottom: #fdfeff;
+	--theme-bg-gradient-bottom: #F2F3F2;
 	--theme-bg-hover: hsla(var(--color-purple), 0.075);
 	--theme-bg-offset: hsla(var(--color-purple), 0.1);
 	--theme-bg-accent: hsla(var(--color-purple), var(--theme-accent-opacity));
