--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -83,13 +83,20 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 	}
 	.nav-group-title {
 		font-size: 1em;
-		font-weight: 600;
+		font-weight: 700;
 		padding: 0.3rem 2rem;
-		background-color: var(--custom-dark-blue);
-		border-radius: 1em 0 0 1em;
+		transition: all .2s ease-in;
+		background-color: var(--custom-green-25);
+		&:hover, &:focus {
+			background-color: var(--custom-green-50);
+		}
+		@media (min-width: 50em) {
+			border-radius: 1em 0 0 1em;
+		}
+		border-radius: 0em 0 0 0em;
 		h2{
 			background: none;
-			color: var(--custom-white)
+			color: var(--theme-text-light)
 		}
 	}
 
@@ -97,7 +104,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		margin: 1px;
 		padding: 0.3rem 2rem;
 		font: inherit;
-		color: var(--theme-text-lighter);
+		color: var(--theme-text-light);
 		text-decoration: none;
 		display: block;
 		$indent: 0em;
@@ -105,18 +112,20 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		position: relative;
 		left: $indent;
 		border-radius: 1em 0 0 1em;
-
+		&:hover {
+			font-weight: 700;
+		}
 		&:hover,
 		&:focus {
-			background-color: var(--custom-teal-25);
+			// background-color: var(--custom-teal-25);
 		}
 
 		&[aria-current='page'],
 		&[data-current-parent='true'] {
-			color: var(--theme-text);
-			background-color: var(--custom-teal-25);
+			color: var(--theme-text-light);
+			// background-color: var(--custom-teal-25);
 			
-			font-weight: 500;
+			font-weight: 700;
 			/* Indicates the current page for forced colors users in older browsers */
 			outline: 1px solid transparent;
 
