--- a/src/components/TabGroup/TabGroup.css
+++ b/src/components/TabGroup/TabGroup.css
@@ -12,7 +12,7 @@
 	cursor: pointer;
 	padding: 1rem 1rem 0.8rem;
 	color: var(--theme-text-light);
-	border-bottom: 6px solid transparent;
+	border-bottom: 6px solid var(--custom-grey-1-50);
 	margin-bottom: -6px;
 	background-color: transparent;
 	text-decoration: none;
