--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import Button from '~/components/Button.astro';
 	<div class="content-wrapper">
 		
 		<div class="content">
-			<h1>Welcome to CORE RMS</h1>
+			<h1>Welcome to CORE</h1>
 			
 			<div class="cell border">
 				
