--- a/public/theme.css
+++ b/public/theme.css
@@ -25,11 +25,9 @@
 }
 
 /* IMPORT MONTSERRAT */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import '@fontsource/montserrat';
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap'); */
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
-}
 
 
 @media (min-width: 50em) {
@@ -60,6 +58,7 @@ h1, h2, h3, h4, h5, h6 {
 */
 :root,
 ::backdrop {
+	--font-heading: 'Montserrat', sans-serif;
 	--font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
 		Apple Color Emoji, Segoe UI Emoji;
 	--font-body: system-ui, var(--font-fallback);
@@ -214,4 +213,9 @@ h1, h2, h3, h4, h5, h6 {
 ::selection {
 	color: var(--custom-accent-1);
 	background-color: var(--custom-accent-2-25);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-heading)
+    /* font-family: 'Montserrat', sans-serif; */
 }
