--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -85,7 +85,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		font-size: 1em;
 		font-weight: 700;
 		padding: 0.3rem 2rem;
-		transition: all .2s ease-in;
+		transition: all .1s ease-in;
 		background-color: var(--custom-green-25);
 		&:hover, &:focus {
 			background-color: var(--custom-green-50);
@@ -110,14 +110,16 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		$indent: 0em;
 		width: calc(100% - #{$indent});
 		position: relative;
+		cursor:pointer;
 		left: $indent;
 		border-radius: 1em 0 0 1em;
 		&:hover {
-			font-weight: 700;
+			// font-weight: 700;
+			// border-bottom: 1px dotted var(--custom-dark-blue);
 		}
 		&:hover,
 		&:focus {
-			// background-color: var(--custom-teal-25);
+			background-color: var(--custom-grey-1-10);
 		}
 
 		&[aria-current='page'],
@@ -125,7 +127,8 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 			color: var(--theme-text-light);
 			// background-color: var(--custom-teal-25);
 			
-			font-weight: 700;
+			font-weight: 500;
+			font-style: italic;
 			/* Indicates the current page for forced colors users in older browsers */
 			outline: 1px solid transparent;
 
