--- a/src/components/NavBlock.astro
+++ b/src/components/NavBlock.astro
@@ -74,6 +74,7 @@ import { Icon } from 'astro-icon'
     }
     .header-wrap {
       display: flex;
+      align-items: center;
       gap: 20px;
       margin-bottom: 20px;
     }
@@ -106,18 +107,21 @@ import { Icon } from 'astro-icon'
       flex-direction: column;
       align-items: flex-start;
       justify-content: space-between;
+      border-radius: 12px;
       border: 1px solid var(--theme-dim);
       box-shadow: -2px 2px 0px var(--theme-dim-light);
       transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
       animation: fadeInUp 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
     .nav-block:hover,.nav-block:focus {
+        background-color: var(--theme-bg-gradient-top);
         border-color: var(--theme-accent);
         box-shadow: -2px 2px 0px var(--theme-accent);
         text-decoration: none;
     }
     .nav-block h3 {
-        margin-top: 1.5rem;
+        /* margin-top: 1.5rem; */
+        margin: 0 auto;
     }
     .nav-block .tags {
       /* styles for the tags container */
