--- a/src/components/ResourceCard.astro
+++ b/src/components/ResourceCard.astro
@@ -101,15 +101,15 @@ import { Icon } from 'astro-icon'
       border-radius: 12px;
       border: 1px solid var(--theme-dim);
       box-shadow: -2px 2px 0px var(--theme-dim-light);
-      transition: all 200ms ease-in;
-      animation: fadeInUp 1s ease-in;
+      transition: all 100ms ease-in;
+      animation: fadeInUp .3s ease-in;
     }
     .resource-card:hover,.resource-card:focus {
         border-color: var(--theme-accent);
         background-color: var(--theme-bg-gradient-top);
         box-shadow: -2px 2px 0px var(--theme-accent);
         .icon-container {
-          // background-color: var(--custom-teal-50);
+          background-color: var(--custom-grey-1-20);
           [astro-icon] {
             // color: var(--custom-white);
           }
