--- a/src/components/ResourceDetails.astro
+++ b/src/components/ResourceDetails.astro
@@ -34,6 +34,7 @@ import { Icon } from 'astro-icon'
         height: 80px;
         width: 80px;
         border-radius: 28px;
+        background-color: var(--custom-grey-1-20);
     }
     .icon-container [astro-icon] {
         font-size: 3em;
