--- a/src/components/RightSidebar/TableOfContents.css
+++ b/src/components/RightSidebar/TableOfContents.css
@@ -70,6 +70,21 @@
 	unicode-bidi: plaintext;
 }
 
+/* Right Sidebar Current Heading Link Styles */
+a.current-header-link {
+	cursor: pointer;
+    background-color: var(--custom-dark-blue-10);
+    border-inline-start: 0.5rem solid var(--custom-dark-blue);
+    outline: 1px solid transparent;
+}
+
+a.current-header-link:hover,  a.current-header-link:focus {
+    background-color: var(--custom-dark-blue-10);
+    border-inline-start: 0.5rem solid var(--custom-dark-blue);
+    outline: 1px solid transparent;
+}
+/* End Links Styles */
+
 .toc-mobile-container[open] .toc-toggle {
 	background-color: var(--custom-teal-25);
 }
