--- a/public/theme.css
+++ b/public/theme.css
@@ -1,5 +1,4 @@
-@import '@fontsource/montserrat';
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /*
 	Define common sizes and spacings
@@ -26,12 +25,6 @@
 	/* Animation helpers */
 	--theme-ease-bounce: cubic-bezier(0.4, 2.5, 0.6, 1);
 }
-
-/* IMPORT MONTSERRAT */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap'); */
-
-
 
 @media (min-width: 50em) {
 	:root {
