--- a/src/components/Buttons/SimpleButton.astro
+++ b/src/components/Buttons/SimpleButton.astro
@@ -22,6 +22,7 @@ const { videoLink, text, onClick } = Astro.props as Props;
       cursor: pointer;
       font-size: 1rem;
       padding: 0.25em 0.5em;
+      min-width: 100px;
       line-height: calc(1 / var(--theme-text-xs));
       &:hover{
         background-color: var(--custom-accent-2-10);
