changing comment style

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -33,7 +33,7 @@ const currentYear = new Date().getFullYear();
 	}
 
 	.footer-links {
-		// border-top: 2px solid var(--custom-grey-1-50);
+		/* border-top: 2px solid var(--custom-grey-1-50); */
 		display: flex;
 		gap: 1.5em;
 		justify-content: center;
