--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -1,7 +1,6 @@
 ---
 import { getLanguageFromURL } from '~/util';
 import { isSubPage } from '~/util/isSubPage';
-import { Icon } from 'astro-icon';
 
 export interface Props {
 	type: TabType;
@@ -25,9 +24,20 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 			<details open>
 				<summary class="nav-group-title">
 					<h2>
-						{section.text}		
+						{section.text}
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 1 16 16"
+							width="16"
+							height="16"
+							aria-hidden="true"
+						>
+							<path
+								fill-rule="evenodd"
+								d="M6.22 3.22a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06L9.94 8 6.22 4.28a.75.75 0 010-1.06z"
+							/>
+						</svg>
 					</h2>
-					<Icon name="mdi:chevron-right" />
 				</summary>
 				<ul>
 					{section.children.map(({ slug, text, isFallback }) => (
@@ -74,7 +84,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 	.nav-group-title {
 		font-size: 1em;
 		font-weight: 700;
-		padding: 0.5rem 2rem;
+		padding: 0.3rem 2rem;
 		transition: all .1s ease-in;
 		background-color: var(--custom-green-25);
 		&:hover, &:focus {
@@ -82,13 +92,8 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		}
 		@media (min-width: 50em) {
 			border-radius: 1em 0 0 1em;
-			font-size: 1.1em;
-			padding: 0.3rem 2rem;
 		}
 		border-radius: 0em 0 0 0em;
-		padding: 0.5rem 1rem;
-		display: flex;
-		justify-content: space-between;
 		h2{
 			background: none;
 			color: var(--theme-text-light)
@@ -97,11 +102,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 
 	.nav-link a {
 		margin: 1px;
-		padding: 0.5rem 1rem;
-		@media (min-width: 50em) {
-			padding: 0.3rem 2rem;
-			border-radius: 1em 0 0 1em;
-		}
+		padding: 0.3rem 2rem;
 		font: inherit;
 		color: var(--theme-text-light);
 		text-decoration: none;
@@ -111,10 +112,10 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		position: relative;
 		cursor:pointer;
 		left: $indent;
-		border-radius: 0em 0 0 0em;
+		border-radius: 1em 0 0 1em;
 		&:hover {
-			// font-weight: 700;
-			// border-bottom: 1px dotted var(--custom-dark-blue);
+			/* font-weight: 700;
+			border-bottom: 1px dotted var(--custom-dark-blue); */
 		}
 		&:hover,
 		&:focus {
@@ -124,7 +125,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		&[aria-current='page'],
 		&[data-current-parent='true'] {
 			color: var(--theme-text-light);
-			// background-color: var(--custom-teal-25);
+			/*  background-color: var(--custom-teal-25);*/
 			
 			font-weight: 500;
 			font-style: italic;
@@ -132,7 +133,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 			outline: 1px solid transparent;
 
 			&:focus {
-				// outline: 2px solid;
+				/* outline: 2px solid; */
 			}
 		}
 
