updating pnpm dependencies, fixing more css comments

--- a/src/components/PopUps/SearchModal.astro
+++ b/src/components/PopUps/SearchModal.astro
@@ -48,11 +48,11 @@ import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
     @media (min-width: 50em) {
         width: 600px;
     }
-    // background-color: var(--custom-white);
-    // border-radius: 6px;
-    // border-top-left-radius: 6px;
-    // border-top-right-radius: 6px;
-    // padding: 10px;
+    /* background-color: var(--custom-white);
+    border-radius: 6px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    padding: 10px; */
     .noResultsMessage {
       text-align: center;
     }
