initial web push notifications implemented - need to push to server to test

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -57,5 +57,15 @@ import '@fontsource/ibm-plex-mono/400-italic.css';
 		}
 	});
 </script>
-<!-- Fathom - beautiful, simple website analytics -->
-<script src="https://certain-quality.astro.build/script.js" data-site="EZBHTSIG" defer></script>
+
+<!-- Push Notifications -->
+<script src="/OneSignalSDKWorker.js" defer></script>
+<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script>
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(function(OneSignal) {
+    OneSignal.init({
+      appId: "a327bda7-90b2-483b-bb99-6e843f02020b",
+    });
+  });
+</script>
