--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -2,12 +2,16 @@
 import Footer from '../components/Footer/Footer.astro';
 import HeadCommon from '../components/HeadCommon.astro';
 import Header from '../components/Header/Header.astro';
+import HeaderNoFeatures from '../components/Header/HeaderNoFeatures.astro';
 import { normalizeLangTag } from '../i18n/bcp-normalize';
 import { rtlLanguages } from '../i18n/languages';
 import { useTranslations } from '../i18n/util';
 import { getLanguageFromURL } from '../util';
 import SplashAnimation from '../components/SplashAnimation.astro';
 import SessionManager from '~/components/DynamicContent/SessionManager.astro';
+import HeadAnalytics from '~/components/HeadAnalytics.astro';
+import LogInFunctions from '~/components/DynamicContent/LogInFunctions.astro';
+import { pwaInfo } from 'virtual:pwa-info';
 
 /* Popups/Modals/Lightboxes/Dialogs/etc */
 import ReloadPrompt from '~/components/ReloadPrompt.astro';
@@ -17,6 +21,8 @@ import FeedbackModal from '~/components/PopUps/FeedbackModal.astro';
 import VideoModal from '~/components/PopUps/VideoModal.astro';
 import AnnouncementModal from '~/components/PopUps/AnnouncementModal.astro';
 import SearchModal from '~/components/PopUps/SearchModal.astro';
+import ChatWidget from '~/components/Widgets/ChatWidget.astro';
+import PWA from '~/components/Head/PWA.astro';
 
 export interface Props {
 	title: string;
@@ -32,8 +38,19 @@ const t = useTranslations(Astro);
 <html dir={dir} lang={bcpLang} class="initial">
 	<head>
 		<HeadCommon />
+		{import.meta.env.PUBLIC_FEATURE_ANALYTICS=="true" &&
+			<HeadAnalytics/>
+		}
+		
+		<!-- App-like Code -->
+		<SessionManager/>
+		<script src="/src/pwa.ts"></script>
+		<PWA/>
+		{ pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
+		<!-- END App-like Code -->
+		
 		<SessionManager />
-		<title>{`${title} 🚀 ${t('site.title')}`}</title>
+		<title>{`${title} | ${t('site.title')}`}</title>
 		<style>
 			html,
 			body,
@@ -49,22 +66,32 @@ const t = useTranslations(Astro);
 				display: none;
 			}
 		</style>
+
 	</head>
 
 	<body>
-		<SplashAnimation/>
-		<Header />
+		<HeaderNoFeatures />
 		<main class="layout splash-layout">
 			<article>
 				<slot />
 			</article>
 		</main>
 		<Footer />
+
+		<!-- ===== Popups, Widgets, Banners, etc. ===== -->
 		<QRCodeModal/>
 		<OptionsModal/> 
 		<FeedbackModal/>
 		<VideoModal/>
 		<AnnouncementModal/>
 		<SearchModal />
+		<LogInFunctions/>
+		<!-- {import.meta.env.PUBLIC_FEATURE_CHAT=="true" &&
+			<ChatWidget/>
+		} -->
+		{import.meta.env.PUBLIC_FEATURE_SPLASH_ANIMATION=="true" &&
+			<SplashAnimation/>
+		}
+		<!-- ===== END Popups, Widgets, Banners, etc. ===== -->
 	</body>
 </html>
